--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html{
     
 }
 body{
-    background-color: #5f9ea0;
+  background-color: #e7e9f0;
 
 }
 #load-hide{
@@ -63,12 +63,14 @@ body{
 }
 
 #title{
-  background-color: white;
-  color:rgb(6, 11, 77);
+  background-color: #e7e9f0;
+  color:#051747;
+  font-family: 'Marcellus SC', serif;
+
   font-weight: bolder;
 }
 .navbar-toggler-icon{
-  background-color:#ec008c;
+  background-color:#051747;
 
 }
 #navbarTogglerDemo01 li{
@@ -76,7 +78,7 @@ body{
 
 }
 #navbarTogglerDemo01{
-  background:linear-gradient(to right,#ec008c,#fc6767); 
+  background:linear-gradient(to right,#ADD8E6,#051747); 
 
 }
 #link{
@@ -91,71 +93,92 @@ body{
 }
 #About p{
   font-weight: 500;
+  font-style: italic;
   font-size: large;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 #head{
   text-align: center;
+
 }
 .call h2{
   text-align: center;
-  font-weight: bold;
+  font-weight: medium;
   font-family: 'Marcellus SC', serif;
+  color: #051747;
 
   }
-  .call h5{
+  .call h6{
     text-align: center;
-  font-weight: bold;
+  font-weight: medium;
+  font-size: large;
+
   }
 #call{
   text-align: center;
-  font-weight: bold;
+  margin: 0 10%;
+  font-size: large;
+  color: red;
+}
+#track1 #track2 table tr{
+  font-style: italic;
+  font-size: large;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+#track1 table{
+  box-sizing: border-box;
+  border-radius: 2px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #051747;
+  background-color: #303133;
+}
+#track1 tr:nth-child(even) {
+  background-color: #f8ca74;
 }
 #track1{
     display: inline-block;
-    font-size: large;
     color: white;
-    font-weight: bold;
     text-align: center;
-    background:linear-gradient(to right,#ec008c,#fc6767); 
     /* background-color: #FE828C; */
     animation-name: floating;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
-    margin-left: 30px;
-    margin-top: 5px;
-    box-shadow: rgba(0,0,0,0.15)1.96px 1.95px 1.95px 2.6px;
+    margin:0 0 0 10%;
     padding: 10px;
-    border-radius: 1em;
+    
   }
-#track1 h4{
-  border: 1px solid black;
-  background-color: black;
-  border-radius: 2px;
-}
+
 @keyframes floating {
     0% { transform: translate(0,  0px); }
     50%  { transform: translate(0, 15px); }
     100%   { transform: translate(0, -0px); }   
 }
+#track2 table{
+  box-sizing: border-box;
+  border-radius: 2px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #051747;
+  background-color: #303133 ;
+}
+#track2 tr:nth-child(even) {
+  background-color: #f8ca74;
+}
 #track2{
   text-align: center;
     display: inline-block;
-    font-size: large;
     color: white;
-    font-weight: bold;
-     background:linear-gradient(to right,#ec008c,#fc6767); 
     /* background-color: #FE828C; */
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
-    margin-left: 30px;
-    margin-top: 5px;
-    box-shadow: rgba(0,0,0,0.15)1.96px 1.95px 1.95px 2.6px;
-    padding: 10px;
-    border-radius: 1em;
-}
+    margin: 0 10% 0 4%;
+  }
 
 #track2 h4{
   border: 1px solid black;
@@ -166,11 +189,10 @@ body{
   text-align: justify;
 }
 #Guidelines h2{
-  padding-bottom: 2%;
-  color: black;
   text-align: center;
-  font-weight: bold;
+  font-weight: medium;
   font-family: 'Marcellus SC', serif;
+  color: #051747
 
 }
 #Guidelines .row{
@@ -189,23 +211,70 @@ body{
   font-weight: 500;
   font-size: 105%;
 }
+.dates h3{
+  text-align: center;
+  font-weight: medium;
+  font-family: 'Marcellus SC', serif;
+  color: #051747
+}
+.table1 .table2{
+  font-style: italic;
+  font-size: large;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  color: whitesmoke;
+}
 .table1{
-    border: 1px;
-    border-color: black;
-   border-width: 0.2em;
-   border-style: solid;
+  color: whitesmoke;
+
+  box-sizing: border-box;
+  border-radius: 2px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #051747;
+  background-color: #303133;
+}
+.table2{
+  color: whitesmoke;
+
+  box-sizing: border-box;
+  border-radius: 2px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #051747;
+  background-color: #303133;
+}
+.table1{
+  text-align: center;
    width: 50%;
    padding: 0.7em;
     
 }
-td, th, tr{
-    border-width: 0.2em;
-    border-style: solid;
-    border-color: black;
+.table1 td{
+  padding: 1% 0 1% 0;
+}
+.table2{
+  text-align: center;
+   width: 50%;
+   padding: 0.7em;
+}
+.table2 td{
+  padding: 1.5% 0 1.5% 0;
+}
+.table1 tr:nth-child(even) {
+  background-color: #f8ca74;
+}
+.table2 tr:nth-child(even) {
+  background-color: #f8ca74;
 }
 .container{
-    
-    border-left: 0.2em solid rosybrown;
+    margin: 0 10%;
+    text-align: justify;
+}
+.container p{
+  color: red;
+  font-weight: 500;
 }
 .chief{
     width: 20%;
