--- a/style.css
+++ b/style.css
@@ -1,368 +1,495 @@
 
 html{
-  margin: 0px;
-  padding: 0px;
-  max-width: 100%;
- 
-  
+    margin: 0px;
+    padding: 0px;
+    max-width: 100%;
+   
+    
 }
 body{
-background-color: #e7e9f0;
+  background-color: #e7e9f0;
 
 }
 #load-hide{
-display: none;
+  display: none;
 }
 
 #preloader{
-height: 100vh;
-width: 100%;
-align-items: center;
-justify-content: center;
-display: flex;
-background-color: whitesmoke;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: whitesmoke;
 }
 #preloader li{
-border-radius: 4px;
-display:inline-block;
-width: 12px;
-height: 49px;
-margin: 0 1px;
-background-color: #051747;
-animation: popping .7s infinite alternate;
+ border-radius: 4px;
+  display:inline-block;
+  width: 12px;
+  height: 49px;
+  margin: 0 1px;
+  background-color: #051747;
+  animation: popping .7s infinite alternate;
 }
 
 @keyframes popping {
-0%{
-  transform: scale(1);
-}
-25%{
-  transform: scale(1);
-}
-50%{
-  transform: scale(1);
-}
-75%{
-  transform: scale(1);
-}
-100%{
-  transform: scaley(2.1);
-}
+  0%{
+    transform: scale(1);
+  }
+  25%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1);
+  }
+  75%{
+    transform: scale(1);
+  }
+  100%{
+    transform: scaley(2.1);
+  }
 }
 #preloader li:nth-child(1){
-animation-delay: .1s;
+  animation-delay: .1s;
 }
 #preloader li:nth-child(2){
-animation-delay: .2s;
+  animation-delay: .2s;
 }
 #preloader li:nth-child(3){
-animation-delay: .3s;
+  animation-delay: .3s;
 }
 #preloader li:nth-child(4){
-animation-delay: .4s;
+  animation-delay: .4s;
+}
+.seclogo{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.seclogo h5{
+  font-weight: bold;
+  text-align: justify;
+}
+#title ul li .active{
+background-color: red;
 }
 
-#title{
-background-color: #e7e9f0;
-color:#051747;
-font-family: 'Marcellus SC', serif;
+#title ul li:nth-child(1):hover,li:nth-child(2):hover,li:nth-child(4):hover,li:nth-child(5):hover,li:nth-child(7):hover,li:nth-child(8):hover{
+  background-color: red;
+  transition: all 0.1s ease;
+}
+a #navbarDropdown .nav-link .dropdown-toggle{
+  font-weight: bold;
+}
+#navbarTogglerDemo01 ul .dropdown-menu{
+  background:#051747; 
+ 
+  color: white;
+}
+#navbarTogglerDemo01 .dropdown-menu li a{
+  color: white;
+font-weight: bold
+}
+#navbarTogglerDemo01 .dropdown-menu li a:hover{
+  background-color:red
 
-font-weight: bolder;
+}
+#title{
+  background-color: #e7e9f0;
+  color:#051747;
+  font-family: 'Marcellus SC', serif;
+
+  font-weight: bolder;
+}
+.coll h3{
+  font-weight: bolder;
+
 }
 .navbar-toggler-icon{
-background-color:#051747;
+  background-color:#051747;
 
 }
+
 #navbarTogglerDemo01 li{
-padding:0 10px;
+  padding:0 10px;
+}
+
+#navbarTogglerDemo01  {
+  background:linear-gradient(to right,#ADD8E6,#051747); 
 
 }
-#navbarTogglerDemo01{
-background:linear-gradient(to right,#ADD8E6,#051747); 
 
-}
 #link{
-text-decoration: none;
-text-transform: uppercase;
-color: white;
-
+  text-transform: uppercase;
+  color: white;
+  
 }
 #About{
-text-align: justify;
-margin: 0 10%;
+  text-align: justify;
+  margin: 0 10%;
 }
 #About p{
-font-weight: 500;
-font-style: italic;
-font-size: large;
-font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-weight: 500;
+  font-style: italic;
+  font-size: large;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 #head{
-text-align: center;
+  text-align: center;
 
 }
 .call h2{
-text-align: center;
-font-weight: medium;
-font-family: 'Marcellus SC', serif;
-color: #051747;
-
-}
-.call h6{
   text-align: center;
-font-weight: medium;
-font-size: large;
+  font-weight: medium;
+  font-family: 'Marcellus SC', serif;
+  color: #051747;
 
-}
+  }
+  .call h6{
+    text-align: center;
+  font-weight: medium;
+  font-size: large;
+
+  }
 #call{
-text-align: center;
-margin: 0 10%;
-font-size: large;
-color: red;
+  text-align: center;
+  margin: 0 10%;
+  font-size: large;
+  color: red;
 }
 #track1 #track2 table tr{
-font-style: italic;
-font-size:large;
-font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-style: italic;
+  font-size: large;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 #track1 table{
-box-sizing: border-box;
-border-radius: 20px;
-border-collapse: collapse;
-border-spacing: 0;
-line-height: 2.5em;
-width: 100%;
-/* border: 1px solid #051747; */
-background-color: #051747;
-
-}
-#track1 tr:nth-child(even) {
-background-color: #535F80;
-}
-#track1{
-  display: inline-block;
-  color: white;
-  text-align: center;
-  /* background-color: #FE828C; */
-  animation-name: floating;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  margin:0 0 0 10%;
-  padding: 10px;
-  
-}
-
-@keyframes floating {
-  0% { transform: translate(0,  0px); }
-  50%  { transform: translate(0, 15px); }
-  100%   { transform: translate(0, -0px); }   
-}
-#track2 table{
   box-sizing: border-box;
   border-radius: 20px;
   border-collapse: collapse;
   border-spacing: 0;
   line-height: 2.5em;
   width: 100%;
-  /* border: 1px solid #051747; */
+  background-color: #051747;
+}
+#track1 tr:nth-child(even) {
+  background-color: #535F80;
+}
+#track1{
+    display: inline-block;
+    color: white;
+    text-align: center;
+    /* background-color: #FE828C; */
+    animation-name: floating;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin:0 0 0 10%;
+    padding: 10px;
+    
+  }
+
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }   
+}
+#track2 table{
+  box-sizing: border-box;
+  border-radius: 20px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  line-height: 2.5em;
   background-color: #051747;
 }
 #track2 tr:nth-child(even) {
-background-color: #535F80;
+  background-color: #535F80;
 }
 #track2{
-text-align: center;
-  display: inline-block;
-  color: white;
-  /* background-color: #FE828C; */
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  margin: 0 10% 0 4%;
-}
+  text-align: center;
+    display: inline-block;
+    color: white;
+    /* background-color: #FE828C; */
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin: 0 10% 0 4%;
+  }
 
 #track2 h4{
-border: 1px solid black;
-background-color: black;
-border-radius: 2px;
+  border: 1px solid black;
+  background-color: black;
+  border-radius: 2px;
 }
 #Guidelines{
-text-align: justify;
-}
-#Guidelines h2{
-text-align: center;
-font-weight: medium;
-font-family: 'Marcellus SC', serif;
-color: #051747
-
-}
-#Guidelines .row{
-text-align: justify;
-margin: 0 15%;
-}
-.guide{
-font-size: large;
-color: #051747;
-}
-.row p{
-font-size:large;
-font-weight: 500;
-}
-.guiderules{
-margin-left: 6%;
-font-weight: 500;
-font-size: 105%;
-}
-.dates h3{
-text-align: center;
-font-weight: medium;
-font-family: 'Marcellus SC', serif;
-color: #051747
-}
-.table1 .table2{
-font-style: italic;
-font-size: large;
-font-family: "Trebuchet MS", Helvetica, sans-serif;
-color: whitesmoke;
-}
-.table1{
-color: whitesmoke;
-line-height: 2em;
-box-sizing: border-box;
-border-radius: 2px;
-border-collapse: collapse;
-border-spacing: 0;
-width: 100%;
-border: 1px solid #051747;
-background-color: #051747;
-}
-.table2{
-color: whitesmoke;
-line-height: 2em;
-box-sizing: border-box;
-border-radius: 2px;
-border-collapse: collapse;
-border-spacing: 0;
-width: 100%;
-border: 1px solid #051747;
-background-color: #051747;
-}
-.table1{
-text-align: center;
- width: 50%;
- padding: 0.7em;
-  
-}
-.table1 td{
-padding: 1% 0 1% 0;
-}
-.table2{
-text-align: center;
- width: 50%;
- padding: 0.7em;
-}
-.table2 td{
-padding: 1.5% 0 1.5% 0;
-}
-.table1 tr:nth-child(even) {
-background-color: #535F80;
-}
-.table2 tr:nth-child(even) {
-background-color: #535F80;
-}
-.container{
-  margin: 0 10%;
   text-align: justify;
 }
+#Guidelines h2{
+  text-align: center;
+  font-weight: medium;
+  font-family: 'Marcellus SC', serif;
+  color: #051747
+
+}
+.guiderules li:hover{
+ background-color: unset;
+}
+#Guidelines .row{
+  text-align: justify;
+  margin: 0 15%;
+}
+.guide{
+  font-size: large;
+  color: #051747;
+}
+.row p{
+  font-size:large;
+  font-weight: 500;
+}
+.guiderules{
+  margin-left: 6%;
+  font-weight: 500;
+  font-size: 105%;
+}
+.dates table{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+.dates h3{
+  text-align: center;
+
+  font-weight: medium;
+  font-family: 'Marcellus SC', serif;
+  color: #051747
+}
+.table1 .table2{
+  font-style: italic;
+  font-size: large;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  color: whitesmoke;
+}
+.table1{
+  color: whitesmoke;
+  line-height: 2em;
+  box-sizing: border-box;
+  border-radius: 2px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  background-color: #051747;
+}
+.table2{
+  color: whitesmoke;
+  line-height: 2em;
+  box-sizing: border-box;
+  border-radius: 2px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #051747;
+  background-color: #051747;
+
+}
+.table1{
+  text-align: center;
+   width: 50%;
+   padding: 0.7em;
+    
+}
+.table1 td{
+  padding: 1% 0 1% 0;
+}
+.table2{
+  text-align: center;
+   width: 50%;
+   padding: 0.7em;
+}
+.table2 td{
+  padding: 1.5% 0 1.5% 0;
+}
+.table1 tr:nth-child(even) {
+  background-color: #535F80;
+}
+.table2 tr:nth-child(even) {
+  background-color: #535F80;
+}
+.container{
+    margin: 0 10%;
+    text-align: justify;
+}
 .container p{
-color: red;
-font-weight: 500;
+  color: red;
+  font-weight: 500;
 }
 .chief{
-  width: 20%;
-  height: 30%;
+    width: 20%;
+    height: 30%;
 }
 
 #guest1{
-  text-align: center;
+    text-align: center;
 }
 #guest1 h2{
-font-family: 'Marcellus SC', serif;
-font-weight: bold;
+  font-family: 'Marcellus SC', serif;
+  font-weight: bold;
 
 }
 .guest1img{
-  margin: 0 10px;
-display: inline-block;
-font-size: medium;
-text-align: left;
+    margin: 0 10px;
+  display: inline-block;
+  font-size: medium;
+  text-align: left;
 }
 .guest1img p{
-text-align: center;
-font-weight: 500;
+  text-align: center;
+  font-weight: 500;
 }
 
 #guest1 h3{
-font-family: 'Marcellus SC', serif;
-font-weight: lighter;
+  font-family: 'Marcellus SC', serif;
+  font-weight: bold;
 
 }
 .guest1img img {
--webkit-transition: 0.4s ease;
-transition: 0.4s ease;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
 }
 
-.guest1img:hover img {
--webkit-transform: scale(1.08);
-transform: scale(1.08);
+ .guest1img:hover img {
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
 }
 
 #partners h3{
-font-family: 'Marcellus SC', serif;
-font-weight: bold;
+  font-family: 'Marcellus SC', serif;
+  font-weight: bold;
 }
 #location{
-margin: auto;
-text-align: center;
-}
-.map{
-margin: 0 10px;
-display: inline-block;
-font-size: medium;
-text-align: left;
-}
-.logo{
-  width: 25%;
-  margin: 20px;
-  padding-right:2%;
-}
-
-#committee{
+  margin: auto;
   text-align: center;
 }
+.map{
+  margin: 0 10px;
+  display: inline-block;
+  font-size: medium;
+  text-align: left;
+}
+.logo{
+    width: 25%;
+    margin: 20px;
+    padding-right:2%;
+  }
+
+#committee{
+    text-align: center;
+}
 #committee h3{
-font-family: 'Marcellus SC', serif;
-font-weight: bold;
+  font-family: 'Marcellus SC', serif;
+  font-weight: bold;
 }
 #committee p {
-font-weight: 500;
+  font-weight: 500;
 }
 #committee p strong{
-font-size: large;
+  font-size: large;
 
+}
+#location{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 footer{
-padding: 2% 0 0 0;
-background-color: rgb(46, 43, 43);
-color: white;
+  padding: 2% 0 0 0;
+  background-color: rgb(46, 43, 43);
+  color: white;
 }
 footer address{
-font-size: 105%;
+  font-size: 105%;
 }
 footer p{
-margin: 2% 0 0 0;
-text-align: center;
+  margin: 2% 0 0 0;
+  text-align: center;
+}
+.icon{
+  display: flex;
+}
+.icon a{
+  padding: 5%;
+  text-decoration: none;
+}
+.icon a i{
+  font-size: 175%;
+}
+.icon a:nth-child(2){
+color: #e6add5;
+}
+.icon a:nth-child(3){
+  color: #18bff1;
+  }
+  .icon a:nth-child(4){
+    color: #2248f0;
+    }
+    .icon a:nth-child(5){
+      color: #f70404;
+      }
+      .icon a:nth-child(6){
+        color: #3a64f0;
+        }
+.bi-telephone{
+  font-size: 170%;
+}
+.phone{
+  text-decoration: none;
+  text-align: center;
+  font-size: 105%;
+  color: whitesmoke;
+  pointer-events: none;
 }
 
+@media screen and (max-width: 576px) {
+  .map{
+    padding-bottom: 4%;
+  }
+ #location{
+   display: inline-block;
+ }
+ .icon a i{
+  font-size: 140%;
+}
+.table1 {
+  width: 95%;
+}
+.seclogo a img{
+  width: 80px;
+  height: 80px;
+}
+.seclogo h5{
+  font-size: 115%;
+}
+.coll h3{
+  font-size: 130%;
+}
+
+
+}
+@media screen and (max-width: 768px) {
+  .map{
+    padding-bottom: 4%;
+  }
+ #location{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-align: center;
+ }
+ .icon a i{
+  font-size: 160%;
+}
+.table1 {
+  width: 95%;
+}
+}
