--- a/style.css
+++ b/style.css
@@ -119,20 +119,40 @@ font-weight: bold
   background:linear-gradient(to right,#ADD8E6,#051747); 
 
 }
-
+#title h5{
+  font-weight: bold;
+}
 #link{
   text-transform: uppercase;
   color: white;
   
 }
 #About{
-  text-align: justify;
   margin: 0 10%;
 }
-#About p{
-  font-weight: 500;
-  font-style: italic;
+#About h2,h4{
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Marcellus SC', serif;
+  color: #051747;
+}
+#About .abtObj{
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
   font-size: large;
+ list-style-position: inside;
+ font-style: italic;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+.abtObj li:hover{
+  background-color: unset;
+ }
+#About p{
+  text-align: justify;
+  font-weight: 500;
+  font-size: large;
+  font-style: italic;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 #head{
@@ -141,7 +161,7 @@ font-weight: bold
 }
 .call h2{
   text-align: center;
-  font-weight: medium;
+  font-weight: bold;
   font-family: 'Marcellus SC', serif;
   color: #051747;
 
@@ -149,6 +169,8 @@ font-weight: bold
   .call h6{
     text-align: center;
   font-weight: medium;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+font-style: italic;
   font-size: large;
 
   }
@@ -225,10 +247,11 @@ font-weight: bold
 }
 #Guidelines{
   text-align: justify;
+  
 }
 #Guidelines h2{
   text-align: center;
-  font-weight: medium;
+  font-weight: bold;
   font-family: 'Marcellus SC', serif;
   color: #051747
 
@@ -261,7 +284,7 @@ font-weight: bold
 .dates h3{
   text-align: center;
 
-  font-weight: medium;
+  font-weight: bold;
   font-family: 'Marcellus SC', serif;
   color: #051747
 }
@@ -316,17 +339,49 @@ font-weight: bold
 .table2 tr:nth-child(even) {
   background-color: #535F80;
 }
+#journals h2{
+  text-align: center;
+  font-family: 'Marcellus SC', serif;
+  font-weight: bold;
+  color: #051747;
+
+}
+#journals{
+  margin: 0 15%;
+
+}
+#journals p{
+  font-size: large;
+  font-weight: bold;
+  color: #051747;
+}
+#journals ul{
+list-style-position: inside;
+font-size: large;
+font-weight: 500;
+margin-left: 3%;
+}
+#journals li:hover{
+  background-color: unset;
+ }
 .container{
-    margin: 0 10%;
+    margin: 0 15%;
     text-align: justify;
 }
+.container h5{
+  color: #051747;
+
+}
 .container p{
-  color: red;
   font-weight: 500;
+  font-size: large;
 }
 .chief{
     width: 20%;
     height: 30%;
+
+    color: #051747;
+
 }
 
 #guest1{
@@ -335,6 +390,7 @@ font-weight: bold
 #guest1 h2{
   font-family: 'Marcellus SC', serif;
   font-weight: bold;
+  color: #051747;
 
 }
 .guest1img{
@@ -351,6 +407,8 @@ font-weight: bold
 #guest1 h3{
   font-family: 'Marcellus SC', serif;
   font-weight: bold;
+  color: #051747;
+
 
 }
 .guest1img img {
@@ -366,9 +424,12 @@ font-weight: bold
 #partners h3{
   font-family: 'Marcellus SC', serif;
   font-weight: bold;
+  color: #051747;
+
 }
 #location{
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 .map{
@@ -377,31 +438,53 @@ font-weight: bold
   font-size: medium;
   text-align: left;
 }
-.logo{
-    width: 25%;
-    margin: 20px;
-    padding-right:2%;
-  }
 
+.logo{
+  width: 25%;
+  margin: 20px;
+  padding-right:0.5%;
+}
 #committee{
+  margin-left: auto;
+  margin-right: auto;
     text-align: center;
 }
 #committee h3{
   font-family: 'Marcellus SC', serif;
   font-weight: bold;
+  color: #051747;
+
+}
+.cen{
+ display: flex;
+ align-items: center;
+ justify-content: center;
 }
 #committee p {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
   font-weight: 500;
 }
 #committee p strong{
   font-size: large;
 
 }
-#location{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+#workshop{
+  text-align: center;
 }
+#workshop h3{
+font-family: 'Marcellus SC', serif;
+font-weight: bold;
+}
+#workshop p {
+font-weight: 500;
+}
+#workshop p strong{
+font-size: large;
+
+}
+
 footer{
   padding: 2% 0 0 0;
   background-color: rgb(46, 43, 43);
@@ -414,42 +497,28 @@ footer p{
   margin: 2% 0 0 0;
   text-align: center;
 }
-.icon{
-  display: flex;
-}
-.icon a{
-  padding: 5%;
-  text-decoration: none;
-}
-.icon a i{
-  font-size: 175%;
-}
-.icon a:nth-child(2){
-color: #e6add5;
-}
-.icon a:nth-child(3){
-  color: #18bff1;
-  }
-  .icon a:nth-child(4){
-    color: #2248f0;
-    }
-    .icon a:nth-child(5){
-      color: #f70404;
-      }
-      .icon a:nth-child(6){
-        color: #3a64f0;
-        }
 .bi-telephone{
-  font-size: 170%;
+  font-size: 150%;
+}
+.bi-envelope{
+  font-size: 150%;
 }
 .phone{
+  font-size: 170%;
   text-decoration: none;
   text-align: center;
   font-size: 105%;
   color: whitesmoke;
   pointer-events: none;
 }
+.bi{
+  vertical-align: middle;
 
+}
+.map iframe{
+  width: 100;
+  height: 100;
+}
 @media screen and (max-width: 576px) {
  #location .map{
   display: inline-block;
@@ -457,9 +526,7 @@ color: #e6add5;
   align-items: center;
   text-align: center;
  }
- .icon a i{
-  font-size: 140%;
-}
+
 .table1 {
   width: 95%;
 }
@@ -485,9 +552,7 @@ color: #e6add5;
     align-items: center;
    }
 
- .icon a i{
-  font-size: 160%;
-}
+
 .table1 {
   width: 95%;
 }
