--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ body{
 #preloader li:nth-child(4){
   animation-delay: .4s;
 }
+.saveethalogo{
+  width: 520px;
+  height: 80px;
+}
 .seclogo{
   display: flex;
   text-align: center;
@@ -107,7 +111,8 @@ font-weight: bold
 
 }
 .navbar-toggler-icon{
-  background-color:#051747;
+  border-radius: 3px;
+  background-color:#041136;
 
 }
 
@@ -115,7 +120,7 @@ font-weight: bold
   padding:0 10px;
 }
 
-#navbarTogglerDemo01  {
+#navbarTogglerDemo01 {
   background:linear-gradient(to right,#ADD8E6,#051747); 
 
 }
@@ -180,9 +185,17 @@ font-style: italic;
   font-size: large;
   color: red;
 }
-#track1 #track2 table tr{
-  font-style: italic;
+.tracks{
+  margin: 0;
+}
+#track1 tr{
   font-size: large;
+}
+#track2 tr{
+  font-size: large;
+}
+#track1 #track2 tr{
+  
   font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 #track1 table{
@@ -262,7 +275,7 @@ font-style: italic;
 }
 #Guidelines .row{
   text-align: justify;
-  margin: 0 15%;
+  margin: 0 10%;
 }
 .guide{
   font-size: large;
@@ -348,7 +361,7 @@ font-style: italic;
 
 }
 #journals{
-  margin: 0 15%;
+  margin: 0 10%;
 
 }
 #journals p{
@@ -457,10 +470,11 @@ margin-left: 3%;
 
 }
 .cen{
- display: flex;
- align-items: center;
- justify-content: center;
+ margin: 0 0 0 26%;
 }
+.cent{
+  margin: 0 0 0 30%;
+ }
 #committee p {
   margin-left: auto;
   margin-right: auto;
@@ -521,8 +535,35 @@ footer p{
   height: 100;
 }
 @media screen and (max-width: 576px) {
+  .cen{
+    margin: 0 2% 0 2%;
+   }
+   .cent{
+     margin: 0 2% 0 2%;
+    }
+  .saveethalogo{
+    width: 380px;
+    height: 80px;
+    object-fit: contain;
+  }
+  .navbar-nav{
+    background-color:black;
+  }
   #title h5{
     font-weight: bold;
+  }
+  #track1 tr{
+    font-size: medium;
+  }
+  #track2 tr{
+    font-size: medium;
+  }
+  #track1{
+    margin: 0 1% 0 1%;
+  }
+  #track2{
+    margin: 0 2% 0 2%;
+
   }
  #location .map{
   display: inline-block;
@@ -548,6 +589,33 @@ footer p{
 
 }
 @media screen and (max-width: 768px) {
+  #track1 tr{
+    font-size: medium;
+  }
+  #track2 tr{
+    font-size: medium;
+  }
+  #track1{
+    margin: 0 1% 0 1%;
+  }
+  #track2{
+    margin: 0 2% 0 2%;
+
+  }
+  .cen{
+    margin: 0 2% 0 2%;
+   }
+   .cent{
+     margin: 0 2% 0 2%;
+    }
+  .saveethalogo{
+    width: 380px;
+    height: 80px;
+    object-fit: contain;
+  }
+  .navbar-nav{
+    background-color:black;
+  }
   .map{
     padding-bottom: 4%;
   }
@@ -556,8 +624,9 @@ footer p{
     align-items: center;
    }
 
-
 .table1 {
   width: 95%;
 }
 }
+
+
