--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@
 html{
     margin: 0px;
     padding: 0px;
-    max-width: 100%;
-   
-    
+    max-width: 100%; 
 }
 body{
   background-color: #e7e9f0;
@@ -353,6 +351,14 @@ font-style: italic;
 .table2 tr:nth-child(even) {
   background-color: #535F80;
 }
+.payment table{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+.paytable{
+  font-size: large;
+}
 #journals h2{
   text-align: center;
   font-family: 'Marcellus SC', serif;
@@ -534,6 +540,7 @@ footer p{
   width: 100;
   height: 100;
 }
+
 @media screen and (max-width: 576px) {
   .cen{
     margin: 0 2% 0 2%;
@@ -542,7 +549,7 @@ footer p{
      margin: 0 2% 0 2%;
     }
   .saveethalogo{
-    width: 360px;
+    width: 370px;
     height: 80px;
     object-fit: contain;
   }
@@ -551,6 +558,9 @@ footer p{
   }
   #title h5{
     font-weight: bold;
+  }
+  .paytable{
+    font-size:medium ;
   }
   #track1 tr{
     font-size: medium;
@@ -589,6 +599,7 @@ footer p{
 
 }
 @media screen and (max-width: 768px) {
+  
   #track1 tr{
     font-size: medium;
   }
@@ -609,7 +620,7 @@ footer p{
      margin: 0 2% 0 2%;
     }
   .saveethalogo{
-    width: 360px;
+    width: 370px;
     height: 80px;
     object-fit: contain;
   }
