--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@ body{
 #load-hide{
   display: none;
 }
+#btn-back-to-top {
+  border-radius: 50%;
+  background-color:#041136;
+  color: #e7e9f0;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  font-size: larger;
+  display: none;
+  outline: none;
+}
 
 #preloader{
   height: 100vh;
