--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body{
 background-color: red;
 }
 
-#title ul li:nth-child(1):hover,li:nth-child(2):hover,li:nth-child(4):hover,li:nth-child(5):hover,li:nth-child(7):hover,li:nth-child(8):hover{
+#title ul li:nth-child(1):hover,li:nth-child(2):hover,li:nth-child(4):hover,li:nth-child(5):hover,li:nth-child(7):hover,li:nth-child(8):hover,li:nth-child(9):hover{
   background-color: red;
   transition: all 0.1s ease;
 }
@@ -510,13 +510,13 @@ margin-left: 3%;
 font-family: 'Marcellus SC', serif;
 font-weight: bold;
 }
-#workshop p {
-font-weight: 500;
+#workshop table {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: large;
 }
-#workshop p strong{
-font-size: large;
 
-}
 
 footer{
   padding: 2% 0 0 0;
@@ -592,6 +592,11 @@ padding-right: 5%;
     margin: 0 2% 0 2%;
 
   }
+  #workshop table{
+    font-size: medium;
+    width: 90%;
+
+  }
  #location .map{
   display: inline-block;
   justify-content:center ;
@@ -651,6 +656,10 @@ padding-right: 5%;
     justify-content:center ;
     align-items: center;
    }
+   #workshop table{
+    font-size: medium;
+    width: 90%;
+  }
 
 .table1 {
   width: 95%;
